group 'com.hillel'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

allprojects {
    apply plugin: 'maven'
    group = 'com.hillel'
    version = '0.1-SNAPSHOT'
}

task fatJar(type: Jar) {
    manifest {
        attributes 'Implementation-Title': 'Gradle Jar File Example',
                'Implementation-Version': version,
                'Main-Class': 'game.main.Main'
    }
    baseName = project.name
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
    tasks.withType(JavaForkOptions) {
        jvmArgs '-Xmx2048m', '-XX:MaxPermSize=512m', '-XX:-UseGCOverheadLimit', '-XX:+CMSClassUnloadingEnabled'
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
